@@ -1,0 +1,9 @@
+#
+#===============================================================================
+
+use strict;
+use warnings;
+
+package Example;
+
+1;
